improvements to mod_onkyo_av and basic network communication

--- a/server/modules/onkyo_av/Makefile
+++ b/server/modules/onkyo_av/Makefile
@@ -1,7 +1,8 @@
 CXX = g++
 CXXFLAGS = -g -O2 -Wall -Wno-sign-compare -Wno-unknown-pragmas -Wno-format -D_GNU_SOURCE
+
 mod_onkyo_av.so : module_onkyo_av.c av.c
-	${CXX} $^ ${CXXFLAGS} -shared -fPIC -L. -o ../../bin/$@
+	${CXX} $^ ${CXXFLAGS} -shared -fPIC -L. -L/opt/local/lib -I/opt/local/include -o ../../bin/$@ -lftdi
 
 clean: 
 	rm -Rf ../../bin/*.so ../../bin/*.dSYM
