--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 sharcsd: main.c ../packet.c connections.c
-	gcc $^ -o bin/$@ -std=c89
+	gcc $^ -o bin/$@ -std=c89 -ldl
 
 clean:
 	@echo "Cleaning..."
