made some small adjustments to get the server to run on raspberry pi

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,5 +1,5 @@
 sharcsd: main.c ../packet.c connections.c
-	gcc $^ -o bin/$@ -std=c89 -ldl -g
+	gcc $^ -o bin/$@ -std=c99 -ldl -g -D_BSD_SOURCE -D_GNU_SOURCE -lpthread
 
 clean:
 	@echo "Cleaning..."
